feat: add iphone images to public folder

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,11 @@
   <app-root></app-root>
 
 <img style="width: 320x; height: 180px; margin-right: 24px" src= "IMG_2453.jpg">
-<img style="width: 320px; height: 180px;" src= "/IMG_1090727.jpg">
+<img style="width: 320px; height: 180px;" src= "IMG_1090727.jpg">
 <div style="width: 524px; height: 100px; background-color: aqua;
 margin-top: 36px; margin-bottom: 36px;"></div>
 <input style="height:20px;">
 <button style="width:120px;height: 18px;px; margin-left: 18px;">button</button >
-
 <a href="https://info.tainan.gov.tw/News_Content.aspx?n=25742&s=7698452#" target="_blank">台南市政府</a>
 <div style="width: 300px; height: 300px; background-color:blue; text-align: center; padding: 5px"> <!-- 我希望我這個div裡面的內容都置中,標籤與標籤之間的距離使用'padding' -->
 <h2 style="color: white;">登入</h2>
@@ -31,9 +30,10 @@ margin-top: 36px; margin-bottom: 36px;"></div>
 <button style="color:white; background-color: red; border-radius: 15px; width: 68%;">登入</button>
 <!-- 設定登入按鈕大小的時候建議是[%]or[piexl] -->
 </div>
-
+<!--  9.CSS 使用者互動-->
 </body>
 </html>
+
 
 
 <!-- F&Q -->
@@ -54,6 +54,5 @@ margin-top: 36px; margin-bottom: 36px;"></div>
 
 <!-- 我現在需要寫一個黑色長方形邊框:AI撰寫(tab) -->
  <!-- <div style="width:300px; height:150px; border:5px solid black; margin-top:20px; padding:5px;"></div> padding: 2px 3px 4px 5px; /*上 右 下 左*/ ▶️,四邊,上下,上右下,上右下左 -->
-
 
 
